[tool.poetry]
name = "dinner"
version = "0.1.0"
description = ""
authors = ["Lewis <lewis.bails@gmail.com>"]
readme = "README.md"
packages = [
    { "include" = "app", "from" = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.57.4"
pydantic = "^2.10.3"
fastapi = {extras = ["standard"], version = "^0.115.6"}
python-dotenv = "^1.0.1"
pymupdf = "^1.25.1"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
